feat(profile,kafka,gateway): refactor profile entity, Kafka integration, and gateway alignment
Redesigned ProfileEntity with updated/removed fields to support new business logic
Added new profile operations (e.g., search, update, visibility control) and removed obsolete fetch methods
Migrated service to Eureka for service discovery
Disabled direct access to Swagger UI — documentation now only available via API Gateway (aggregated)
Overhauled Kafka integration: eliminated explicit payload mappers; now uses dynamic deserialization based on event schema
Updated system files (Dockerfile, application.yml, build.gradle etc.) to reflect new architecture