@@ -8,46 +8,36 @@ import ru.solomka.profile.common.exception.EntityNotFoundException;
 import ru.solomka.profile.common.mapper.Mapper;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 public class CrudProfileServiceAdapter extends BaseJpaRepositoryAdapter<JpaProfileEntity, ProfileEntity> implements ProfileRepository {
 
     @NonNull CrudProfileRepository crudProfileRepository;
-    @NonNull Mapper<JpaProfileEntity, ProfileEntity>  jpaProfileEntityProfileEntityMapper;
+    @NonNull Mapper<JpaProfileEntity, ProfileEntity>  mapper;
 
     public CrudProfileServiceAdapter(@NonNull CrudProfileRepository repository,
                                      @NonNull Mapper<JpaProfileEntity, ProfileEntity> mapper) {
         super(repository, mapper);
         this.crudProfileRepository = repository;
-        this.jpaProfileEntityProfileEntityMapper = mapper;
+        this.mapper = mapper;
     }
 
     @Override
-    public ProfileEntity getProfileByProfileName(@NonNull String profileName) {
-        return crudProfileRepository.findProfileByProfileName(profileName)
-                .map(jpaProfileEntityProfileEntityMapper::mapToDomain)
-                .orElseThrow(() -> new EntityNotFoundException(String.format("Profile with profile name '%s' not found", profileName)));
+    public Optional<ProfileEntity> findProfileByUserTag(String userTag) {
+        return this.crudProfileRepository.findProfileByUserTag(userTag).map(mapper::mapToDomain);
     }
 
     @Override
-    public List<ProfileEntity> getProfilesByFirstName(@NonNull String firstName) {
-        return crudProfileRepository.findProfilesByFirstName(firstName).stream()
-                .map(jpaProfileEntityProfileEntityMapper::mapToDomain)
-                .collect(Collectors.toList());
+    public List<ProfileEntity> getProfilesByContainsFirstOrLastName(@NonNull String firstName, String lastName) {
+        return this.crudProfileRepository.getProfilesByContainsFirstOrLastName(firstName, lastName).stream()
+                .map(mapper::mapToDomain)
+                .toList();
     }
 
     @Override
-    public List<ProfileEntity> getProfilesByLastName(@NonNull String lastName) {
-        return crudProfileRepository.findProfilesByLastName(lastName).stream()
-                .map(jpaProfileEntityProfileEntityMapper::mapToDomain)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<ProfileEntity> getProfilesByFirstNameAndLastName(@NonNull String firstName, @NonNull String lastName) {
-        return crudProfileRepository.findProfilesByFirstNameAndLastName(firstName, lastName).stream()
-                .map(jpaProfileEntityProfileEntityMapper::mapToDomain)
-                .collect(Collectors.toList());
+    public boolean existsByUserTag(String userTag) {
+        return this.crudProfileRepository.existsByUserTag(userTag);
     }
 }
